--- a/index.html
+++ b/index.html
@@ -18,26 +18,45 @@
     <p>@brenonorberto</p>
 </div>
 
-<ul>
-    <li>
-      <a href="#">Inscrever-se no NLW</a>
-    </li>
-
-    <li>
-      <a href="#">Baixar meu e-book</a>
-    </li>
-
-    <li>
-      <a href="https://github.com/maykbrito">Ver meu portfólio</a>
-    </li>
-
-    <li>
-      <a href="https://rocketseat.com.br/explorer" target="_blank"
-        >Conheça o Explorer</a
-      >
-    </li>
-  </ul>
-
+<div id="switch" onclick="toggleMode()">
+  <button></button>
+  <span></span>
 </div>
+
+<ul>
+  <li>
+    <a href="https://github.com/brenonorberto">Ver meu portfólio</a>
+  </li>
+
+</ul>
+<div id="social-links">
+  <a href="https://github.com/brenonorberto" target="_blank">
+    <ion-icon name="logo-github"></ion-icon>
+  </a>
+
+  <a href="https://instagram.com/brenonorberto" target="_blank">
+    <ion-icon name="logo-instagram"></ion-icon>
+  </a>
+
+  <a href="https://linkedin.com/in/brenonorberto" target="_blank">
+    <ion-icon name="logo-linkedin"></ion-icon>
+  </a>
+</div>
+
+<footer>
+  Feito com ♥ junto com a <a href="https://rocketseat.com.br/">Rocketseat</a>
+</footer>
+</div>
+
+<script
+type="module"
+src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+></script>
+<script
+nomodule
+src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+></script>
+
+<script src="./script.js"></script>
 </body>
 </html>
